@@ -1,3 +1,9 @@
+2009-12-17  Gustavo Noronha Silva  <gustavo.noronha@collabora.co.uk>
+
+        Unreviewed. Build fixes for make distcheck.
+
+        * GNUmakefile.am:
+
 2009-12-16  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Oliver Hunt.
